# db-serialization

./: .gitignore  LICENSE  README.md  android.result  cabal.project  default.nix
app/: LICENSE  app.cabal
app/src/: Main.hs
backend/: backend.cabal  cabal.project
backend/src/: Api.hs  Database.hs  Main.hs  SerialNumber.hs  Stripe.hs  TestApi.hs  Types.hs  VRD_Api.hs
common/: common.cabal
common/src/: Address.hs  Customer.hs  Main.hs  Shop.hs  Store.hs  TypeClasses.hs
landing/: LICENSE  landing.cabal
landing/src/: Main.hs
vrd/: ChangeLog.md  vrd.cabal
vrd/src/: Main.hs
