-- backend.cabal
   
name:                backend
version:             0.1.0.0
synopsis:            Backend services for VRD and App

homepage:            solvexsoftware.io
license:             BSD3
license-file:        LICENSE
author:              Kyle Jensen, Galen Sprout
maintainer:          admin@solvexsoftware.io

build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable backend
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  
  build-depends:       base
                     , common
                     , reflex-dom
                     , text
                     , time
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , aeson
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , monad-logger
                     , transformers
                     , exceptions